[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/callables/Scripts/Quick_Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Assets/metric_tape.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tutorial/tutorial_1_1.PNG" type="Texture" id=3]
[ext_resource path="res://Assets/ButtonsOutline/talking_head.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pixellari.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/shaders/bright_shader.gdshader" type="Shader" id=7]

[sub_resource type="CanvasItemMaterial" id=28]
blend_mode = 1
light_mode = 2

[sub_resource type="DynamicFont" id=29]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0, 0.556863, 1, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0, 0.74902, 0.662745, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=41]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0, 0.396078, 1, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Shader" id=27]
code = "shader_type canvas_item;

// --- Uniforms --- //
uniform float circle_width: hint_range(0.0, 1.0, 0.05) = 0.15;
uniform float wait_time: hint_range(0.0, 5.0, 0.1) = 0.5;
uniform float speed: hint_range(0.0, 10.0, 0.1) = 1.0;
uniform float alpha_boost: hint_range(1.0, 5.0, 0.1) = 2.0;
uniform vec4 color_bip : hint_color;

// --- Functions --- //
void fragment() {
	float dist = distance(UV, vec2(0.5));
	float mod_dist = dist - mod(TIME * speed, 0.75 + wait_time) + 0.5;
	COLOR = color_bip;
	COLOR.a *= 1.0 - step(0.5, mod_dist);
	COLOR.a += step(0.5 - circle_width / 2.0, mod_dist) - 1.0;
	COLOR.a -= 2.0 * dist;
	COLOR.a *= alpha_boost;
	
}
"

[sub_resource type="ShaderMaterial" id=33]
shader = SubResource( 27 )
shader_param/circle_width = 0.2
shader_param/wait_time = 0.1
shader_param/speed = 1.0
shader_param/alpha_boost = 3.0
shader_param/color_bip = Color( 0, 0.717647, 0.811765, 1 )

[sub_resource type="DynamicFont" id=34]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=39]
shader = ExtResource( 7 )
shader_param/shine_color = Color( 1, 1, 1, 1 )
shader_param/line_width = 0.1
shader_param/angle = 0.785398
shader_param/speed = 0.5
shader_param/wait_cycles = 0.2

[sub_resource type="Curve" id=40]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0, 0.403922, 0.72549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0, 0.74902, 0.662745, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0, 0.396078, 1, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Quick_Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tutorial" type="Sprite" parent="CanvasLayer"]
position = Vector2( 516, 288 )
texture = ExtResource( 3 )

[node name="Background_shadow" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 2.0
margin_top = -1.0
margin_right = 1025.0
margin_bottom = 573.0

[node name="Bright_info" type="Panel" parent="CanvasLayer"]
material = SubResource( 28 )
margin_left = 479.0
margin_top = 3.0
margin_right = 557.0
margin_bottom = 46.0

[node name="Bright_info2" type="Panel" parent="CanvasLayer"]
material = SubResource( 28 )
margin_left = 32.0
margin_top = 498.0
margin_right = 233.0
margin_bottom = 576.0

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -64.0
margin_right = -38.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 29 )
custom_styles/hover = SubResource( 30 )
custom_styles/pressed = SubResource( 31 )
custom_styles/disabled = SubResource( 41 )
custom_styles/normal = SubResource( 32 )
text = "PROXIMO"

[node name="Button_focus" type="Sprite" parent="CanvasLayer/Button"]
visible = false
material = SubResource( 33 )
position = Vector2( 62, 16 )
scale = Vector2( 3.66667, 3.20833 )
texture = ExtResource( 2 )

[node name="Panel2" type="Panel" parent="CanvasLayer"]
margin_left = 256.0
margin_top = 139.0
margin_right = 885.0
margin_bottom = 334.0
mouse_filter = 1

[node name="Explanation" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 11.0
margin_top = 19.0
margin_right = 580.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 34 )
text = "Haga clic en Siguiente para 
continuar o utilice las flechas para ver cualquiera
informaci√≥n nuevamente."
align = 1
clip_text = true

[node name="Money_Line" type="Sprite" parent="CanvasLayer/Panel2"]
visible = false
material = SubResource( 33 )
position = Vector2( 262, -105 )
scale = Vector2( 3.66667, 3.20833 )
texture = ExtResource( 2 )

[node name="Button_Line" type="Sprite" parent="CanvasLayer/Panel2"]
visible = false
material = SubResource( 33 )
position = Vector2( -117, 401 )
scale = Vector2( 3.66667, 3.20833 )
texture = ExtResource( 2 )

[node name="Right" type="Line2D" parent="CanvasLayer/Panel2"]
material = SubResource( 39 )
position = Vector2( 563.493, 170.938 )
scale = Vector2( 1.86111, 1.75 )
points = PoolVector2Array( 18.75, -0.25, 2.75, -0.25 )
width_curve = SubResource( 40 )
default_color = Color( 0, 0.109804, 1, 1 )

[node name="Right_detection" type="Button" parent="CanvasLayer/Panel2/Right"]
margin_left = 0.809723
margin_top = -9.0
margin_right = 20.8097
margin_bottom = 11.0
flat = true

[node name="Left" type="Line2D" parent="CanvasLayer/Panel2"]
material = SubResource( 39 )
position = Vector2( 43.507, 170.937 )
rotation = -3.14159
scale = Vector2( 1.86111, 1.75 )
points = PoolVector2Array( 18.75, -0.25, 2.75, -0.25 )
width_curve = SubResource( 40 )
default_color = Color( 0, 0.109804, 1, 1 )

[node name="Left_detection" type="Button" parent="CanvasLayer/Panel2/Left"]
margin_left = 1.0
margin_top = -10.0
margin_right = 19.0
margin_bottom = 10.0
flat = true

[node name="TTS" type="Button" parent="CanvasLayer"]
margin_left = 840.0
margin_top = 151.0
margin_right = 872.0
margin_bottom = 183.0
custom_styles/hover = SubResource( 35 )
custom_styles/pressed = SubResource( 36 )
custom_styles/normal = SubResource( 37 )

[node name="Icon" type="Sprite" parent="CanvasLayer/TTS"]
position = Vector2( 20, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/Right/Right_detection" to="." method="_on_Right_detection_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel2/Left/Left_detection" to="." method="_on_Left_detection_pressed"]
[connection signal="pressed" from="CanvasLayer/TTS" to="." method="_on_TTS_pressed"]
